--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@ input{
     border: 1px #ccc;
     border-radius: 3px;
     outline: 0;
+    border-radius: 30px;
 }
 button{
     border: 0px;
@@ -41,9 +42,12 @@ color: #fff;
 border-radius: 3px;
 font-weight: bold;
 transition: all ease 0.3s;
+border-radius: 30px;
 }
 button:hover{
     background-color: rgb(41, 4, 78);
+    border-color: rgb(255, 3, 3);
+    border-radius: 30px;
 
 }
 .content{
