--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ header{
 body{
     font-family: 'Nunito Sans', sans-serif;
     background-color: #fafbfc;
-    background-image: linear-gradient(to right,rgb(243, 239, 7),rgb(255, 0, 221));
+    background-image: linear-gradient(to right,rgb(243, 239, 7),rgb(156, 4, 136));
 }
 main{
     padding: 30px 50px;
@@ -29,10 +29,11 @@ card{
 input{
     padding: 10px;
     border: 1px #ccc;
-    border-radius: 3px;
+    border-color: black;
     outline: 0;
     border-radius: 30px;
 }
+
 button{
     border: 0px;
     padding: 10px;
@@ -47,6 +48,7 @@ border-radius: 30px;
 button:hover{
     background-color: rgb(124, 122, 0);
     border-radius: 30px;
+    padding: 30px;
 
 }
 .content{
