alterações para ficar mais bunitu

--- a/css/style.css
+++ b/css/style.css
@@ -74,3 +74,10 @@ table td img{
 {
     text-align: center;
 }
+h1{
+    background-image: linear-gradient(to right,rgb(0, 0, 0),rgb(255, 0, 221));
+
+}
+h2{
+    color: rgb(236, 12, 12);
+}
